# Realtime-blockcoding-web-app

./: Cargo.toml  README.md
app/: Cargo.toml  trunk.toml
app/assets/: index.html
server/: Cargo.toml
src/: lib.rs
src/coding_blocks/: error.rs  mod.rs  state.rs
src/coding_blocks/conditons/: mod.rs
src/coding_blocks/control_blocks/: forloop_block.rs  if_block.rs  if_else_block.rs  mod.rs
src/coding_blocks/operator_blocks/: boolean_operations.rs  compare.rs  mod.rs  two_variable_math.rs
src/coding_blocks/variable_blocks/: mod.rs  modifyblock.rs
src/real_time/: mod.rs
